# optimal-battery-position

./: .gitignore  README.md  bus_system.py  config.py  dqn_agent.py  evaluate_results.py  feeder_1.py  feeder_environment.py  main.py  pyproject.toml  train_agent.py
logs/: evaluations.npz  monitor.csv
logs/PPO_1/: events.out.tfevents.1748341824.DESKTOP-LPH13DP.36017.0
logs/PPO_2/: events.out.tfevents.1748342004.DESKTOP-LPH13DP.37905.0
logs/PPO_3/: events.out.tfevents.1748349998.DESKTOP-LPH13DP.132660.0
logs/PPO_4/: events.out.tfevents.1748431948.DESKTOP-LPH13DP.51094.0
logs/PPO_5/: events.out.tfevents.1748432688.DESKTOP-LPH13DP.56913.0
logs/PPO_6/: events.out.tfevents.1748432875.DESKTOP-LPH13DP.58958.0
logs/PPO_7/: events.out.tfevents.1748433465.DESKTOP-LPH13DP.63428.0
