[project]
name = "battery-placement"
version = "0.1.0"
description = "Agentic ML system to find optimal battery placement in LV feeders"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy==1.24.3",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "gymnasium",
    "stable-baselines3>=1.6.0",
    "torch>=1.11.0",
    "pandapower==2.13.1",
    "networkx>=2.6",
    "scikit-learn>=1.0.0",
    "tensorboard>=2.8.0",
    "ipykernel>=6.29.5",
    "python-igraph>=0.11.9",
    "plotly>=6.2.0",
]
